[package]
name = "windows-audio"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
license = "MIT"

[dependencies]
windows = "0.13"
tracing = "0.1"
lazy_static = "1.4"
crossbeam-channel = "0.5"

bindings = { path = "./bindings" }

[dev-dependencies]
tracing-subscriber = "0.2"
